// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/elements/Checkbox icon/checked 1`] = `
<WithStyles(ForwardRef(SvgIcon))
  viewBox="0 0 16 16"
>
  <rect
    fill="white"
    height="14"
    rx="1"
    stroke="#3B525C"
    strokeWidth="2"
    width="14"
    x="1"
    y="1"
  />
  <rect
    fill="#3B525C"
    height="8"
    rx="2"
    width="8"
    x="4"
    y="4"
  />
</WithStyles(ForwardRef(SvgIcon))>
`;

exports[`src/components/elements/Checkbox icon/inderminate 1`] = `
<WithStyles(ForwardRef(SvgIcon))
  viewBox="0 0 16 16"
>
  <rect
    fill="white"
    height="14"
    rx="1"
    stroke="#3B525C"
    strokeWidth="2"
    width="14"
    x="1"
    y="1"
  />
  <rect
    fill="#3B525C"
    height="2"
    rx="1"
    width="8"
    x="4"
    y="7"
  />
</WithStyles(ForwardRef(SvgIcon))>
`;

exports[`src/components/elements/Checkbox icon/unchecked 1`] = `
<WithStyles(ForwardRef(SvgIcon))
  viewBox="0 0 16 16"
>
  <rect
    fill="white"
    height="14"
    rx="1"
    stroke="#78858B"
    strokeWidth="2"
    width="14"
    x="1"
    y="1"
  />
</WithStyles(ForwardRef(SvgIcon))>
`;

exports[`src/components/elements/Checkbox render 1`] = `
<WithStyles(ForwardRef(Checkbox))
  checkedIcon={<Checked />}
  color="inherit"
  icon={<Checked />}
  indeterminateIcon={<Indeterminate />}
  size="small"
/>
`;
